# LLM-Zero-to-Hundred

./: pyproject.toml
RAG-GPT/configs/: app_config.yml
RAG-GPT/data/docs_2/: 經濟部水利署工務處理要點.txt
RAG-GPT/src/: terminal_q_and_a.py
RAG-GPT/src/utils/: chatbot.py  summarizer.py
tutorials/text_embedding_tutorial/: text_embedding_openai.ipynb
