[tool.poetry]
name = "llm-zero-to-hundred"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gradio = "*"
langchain = "*"
openai = "*"
chromadb = "*"
pypdf = "*"
pandas = "*"
pyprojroot = "*"
tiktoken = "*"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"
